Fix - Mobile banner close button cut off on iphone
Ticket: https://phabricator.wikimedia.org/T378583

--- a/banners/mobile/C24_WMDE_Mobile_DE_06/styles/MiniBanner.scss
+++ b/banners/mobile/C24_WMDE_Mobile_DE_06/styles/MiniBanner.scss
@@ -29,7 +29,7 @@ $height: 288px !default;
 				float: right;
 				height: 16px;
 				line-height: 16px;
-				width: 16px;
+				width: 22px;
 				background: var( --mini-close-background );
 				z-index: 2;
 
